[gd_scene load_steps=29 format=3 uid="uid://c7a0poe57ccya"]

[ext_resource type="Texture2D" uid="uid://cyfrufb2rymsi" path="res://assets/sprites/entities/items.png" id="1_ystj1"]
[ext_resource type="Script" path="res://items/gem/gem.gd" id="2_wyt2y"]
[ext_resource type="AudioStream" uid="uid://blwea4wiq2kmx" path="res://assets/audio/collect_gem.ogg" id="3_0a107"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xv20r"]
atlas = ExtResource("1_ystj1")
region = Rect2(0, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfhkl"]
atlas = ExtResource("1_ystj1")
region = Rect2(18, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiwqb"]
atlas = ExtResource("1_ystj1")
region = Rect2(36, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2wcf"]
atlas = ExtResource("1_ystj1")
region = Rect2(54, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_43mvi"]
atlas = ExtResource("1_ystj1")
region = Rect2(72, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_nes61"]
atlas = ExtResource("1_ystj1")
region = Rect2(90, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysvtf"]
atlas = ExtResource("1_ystj1")
region = Rect2(108, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w0fb"]
atlas = ExtResource("1_ystj1")
region = Rect2(0, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgy6d"]
atlas = ExtResource("1_ystj1")
region = Rect2(18, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_it1q4"]
atlas = ExtResource("1_ystj1")
region = Rect2(36, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4x1j"]
atlas = ExtResource("1_ystj1")
region = Rect2(54, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_iysbx"]
atlas = ExtResource("1_ystj1")
region = Rect2(72, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wffv"]
atlas = ExtResource("1_ystj1")
region = Rect2(90, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewtjl"]
atlas = ExtResource("1_ystj1")
region = Rect2(108, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fom7"]
atlas = ExtResource("1_ystj1")
region = Rect2(0, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bq1p"]
atlas = ExtResource("1_ystj1")
region = Rect2(18, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_uld8e"]
atlas = ExtResource("1_ystj1")
region = Rect2(36, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6d7w"]
atlas = ExtResource("1_ystj1")
region = Rect2(54, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe83q"]
atlas = ExtResource("1_ystj1")
region = Rect2(72, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y8ee"]
atlas = ExtResource("1_ystj1")
region = Rect2(90, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8rm7"]
atlas = ExtResource("1_ystj1")
region = Rect2(108, 36, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_vlx2j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv20r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfhkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiwqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2wcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43mvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nes61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysvtf")
}],
"loop": true,
"name": &"blue",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w0fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgy6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it1q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4x1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iysbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wffv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewtjl")
}],
"loop": true,
"name": &"green",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fom7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bq1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uld8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6d7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe83q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y8ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8rm7")
}],
"loop": true,
"name": &"red",
"speed": 11.0
}]

[sub_resource type="Animation" id="Animation_m5tky"]
resource_name = "bounce"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6)]
}

[sub_resource type="Animation" id="Animation_nt5tf"]
resource_name = "collect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fwxyc"]
_data = {
"bounce": SubResource("Animation_m5tky"),
"collect": SubResource("Animation_nt5tf")
}

[node name="Gem" type="Node2D"]
script = ExtResource("2_wyt2y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vlx2j")
animation = &"blue"
frame_progress = 0.438712

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AnimatedSprite2D/Area2D"]
polygon = PackedVector2Array(-5, -4, 5, -4, 5, 1, 0, 6, -5, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0a107")
bus = &"Coins"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_fwxyc")
}
autoplay = "bounce"

[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
